# FlashMemory

./: .gitignore  CLAUDE.md  Dockerfile.linux  Dockerfile.windows  README.md  README_CN.md  api.md  api_quick.md  build_linux.sh  build_mac.sh  build_windows.sh  fm.yaml  fm.yaml.bak  fm_addon.md  get_shasum.py  get_shasum.sh  go.mod  go.sum  manage-docker.sh  report_claude.md  report_claude_3.7.md  report_deep_research.md  report_o3_mini_high.md  start_fm_http_dev.sh  test_faiss_mirror_fix.sh  tree.md
.agents/skills/flashmemory-core/: SKILL.md
.agents/skills/flashmemory-index/: SKILL.md
.github/workflows/: release.yml  test.yml
assets/: DATASET_PREVIEW.md  README.md
assets/data/: eval_public.jsonl
cmd/app/: README.md  app.go  app_test.go  backwork.go  backwork_test.go  fm_http.go  fm_http_test.go
cmd/app/back/: backwork.go  (+2 more)
cmd/cli/: config_cmd.go  index.go  ingest.go  init_cmd.go  logs.go  procattr_unix.go  procattr_windows.go  query.go  root.go  serve.go  status.go  stop.go  version.go
cmd/common/: errors.go  i18n.go  supperted_lang.go  token.go
cmd/fm/: main.go
cmd/main/: README.md  fm.go  main.go
cmd/playground/: README.md  ana.go
cmd/tree/: README.md  tree.go
config/: config.go  handler.go
docs/: INDEX.md  http_api_deep_analysis.md  release_guide.md  zvec_integration_guide.md  zvec_integration_guide_cn.md  自定义高可用Skill完全教程.md
docs/guides/: release_guide.md  zvec_integration_guide.md  zvec_integration_guide_cn.md
docs/index/: README.md
docs/integration/: README.md  dialog_hooks_example.yaml  gateway_integration_eino.md  http_api_reference.md  mcp_config_example.json
docs/interfaces/: http_api_deep_analysis.md
docs/superpowers/: INDEX.md
docs/templates/: bug-fix-template.md  code-review-template.md  feature-spec-template.md
homebrew/Formula/: flashmemory.rb
internal/analyzer/: analyzer.go  analyzer_test.go  llm_analyzer.go  llm_analyzer_test.go
internal/anchor/: anchor.go  anchor_test.go
internal/back/: backwork.go  faiss.go  faiss_monitor.go
internal/cloud/: fast_function.go
internal/embedding/: embedding.go  embedding_test.go
internal/graph/: graph.go  graph_test.go
internal/index/: branch_index.go  doc_nodes.go  doc_nodes_test.go  faiss_wrapper.go  http_faiss_wrapper.go  index.go  index_test.go  memory_faiss_wrapper.go  zvec_wrapper.go  zvec_wrapper_test.go
internal/ingest/: documents.go  documents_test.go
internal/llm/: router.go  router_test.go
internal/module_analyzer/: integration.go  module_analyzer.go  prompt_selector.go  prompt_selector_test.go
internal/parser/: ast_parser.go  ast_parser_test.go  dart_parser_test.go  doc_parser.go  doc_parser_test.go  llm_parser.go  parser.go  parser_test.go  parser_utils.go  regex_parser.go  regex_parser_test.go  tree_sitter_parser.go  tree_sitter_parser_class_test.go  tree_sitter_parser_imports_calls_test.go  tree_sitter_parser_test.go  walk.go  walk_test.go
internal/ranking/: README.md  example.go  ranking.go  ranking_test.go
internal/router/: intent_router.go  intent_router_test.go
internal/search/: README.md  search.go  search_test.go
internal/telemetry/: events.go  events_test.go
internal/tool/: registry.go  registry_test.go
internal/utils/: FilterUserDefinedCalls.go  dbwriter.go  embedding.go  file.go  git_utils.go  json_reader.go  ollama_call.go  ollama_call_test.go  util.go  utils_unix.go  utils_windows.go
internal/visualize/: visualize.go
npm-package/: install.js  package.json
pip-package/: README.md  pyproject.toml
pip-package/flashmemory/: __init__.py  __main__.py  cli.py  client.py  embedding_provider.py  mcp_server.py  search_pipeline.py  zvec_bridge.py  zvec_engine.py
pip-package/tests/: test_phase2_hybrid.py  test_phase3_ai.py  test_phase4_sdk.py  test_zvec_bridge.py  test_zvec_engine.py
resource/: embed.go  fm.yaml
scripts/: gen_test_docs.py  install.sh  verify_mcp_integration.py
skills/: game-theory-debate  memory-augmented-reply  memory-evolution-cycle  research-paper-writing  symbolism-extract  user-feedback-handler
skills/symbolism-extract/: SKILL.md
skills/user-feedback-handler/: SKILL.md
(+92 files in other folders)
