[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashmemory"
version = "0.4.5"
description = "FlashMemory - Cross-language code analysis and semantic search system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ZetaZeroHub", email = "contact@zzh.app"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["code-analysis", "semantic-search", "llm", "faiss", "zvec", "vector-database", "code-indexing"]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
zvec = [
    "zvec>=0.1.1",
    "sentence-transformers>=2.0.0",
    "rank_bm25>=0.2.2",
    "jieba>=0.42.1",
    "dashtext",
]
embedding = [
    "zvec>=0.1.1",
    "sentence-transformers>=2.0.0",
    "rank_bm25>=0.2.2",
    "jieba>=0.42.1",
    "dashtext",
]
cloud = [
    "openai",
    "dashscope",
]
full = [
    "zvec>=0.1.1",
    "sentence-transformers>=2.0.0",
    "rank_bm25>=0.2.2",
    "jieba>=0.42.1",
    "dashtext",
    "openai",
    "dashscope",
]

[project.urls]
Homepage = "https://github.com/ZetaZeroHub/FlashMemory"
Repository = "https://github.com/ZetaZeroHub/FlashMemory"
Issues = "https://github.com/ZetaZeroHub/FlashMemory/issues"

[project.scripts]
fm = "flashmemory.cli:main_fm"
fm_http = "flashmemory.cli:main_fm_http"
zvec_bridge = "flashmemory.zvec_bridge:main"

[tool.setuptools.packages.find]
include = ["flashmemory*"]
